--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>ShopZilla</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app..</noscript>
+    <div id="loader"></div>
     <div id="root"></div>
-    
   </body>
 </html>
